# mcrouter

./: .gitignore  .projectid  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  PATENTS  README.md
mcrouter/: .gitignore  AccessPoint.cpp  AccessPoint.h  AsyncLog.cpp  AsyncLog.h  AsyncTimer.h  AsyncWriter.cpp  AsyncWriter.h  AsyncWriterEntry.h  AtomicTokenBucket.h  CMakeLists.txt  CallbackPool-inl.h  CallbackPool.h  CarbonRouterClient-inl.h  CarbonRouterClient.h  CarbonRouterClientBase.cpp  CarbonRouterClientBase.h  CarbonRouterFactory-inl.h  CarbonRouterFactory.cpp  CarbonRouterFactory.h  CarbonRouterInstance-inl.h  CarbonRouterInstance.cpp  CarbonRouterInstance.h  CarbonRouterInstanceBase.cpp  CarbonRouterInstanceBase.h  ClientPool.cpp  ClientPool.h  Clock.h  ConfigApi.cpp  ConfigApi.h  ConfigApiIf.h  CyclesObserver.cpp  CyclesObserver.h  DestinationClient-inl.h  DestinationClient.cpp  DestinationClient.h  EventBaseLoopController-inl.h  EventBaseLoopController.h  ExecutorObserver.h  ExponentialSmoothData.cpp  (+174 more)
mcrouter/docs/: Configuration.md  Installation.md  Introduction.md  JSONM.md  Routing.md
mcrouter/examples/: README.md  sharded_repl_async_missfailover.json
mcrouter/lib/: AuxiliaryCPUThreadPool.cpp  AuxiliaryCPUThreadPool.h  AuxiliaryIOThreadPool.cpp  AuxiliaryIOThreadPool.h  CMakeLists.txt  CacheClientStats.h  CallbackPool-inl.h  Ch3HashFunc.h  Clocks.cpp  Clocks.h  Compression.cpp  Compression.h  CompressionCodecManager.cpp  CompressionCodecManager.h  Crc32HashFunc.h  DynamicUtil.cpp  DynamicUtil.h  FailoverContext.h  FailoverErrorsSettings.cpp  FailoverErrorsSettings.h  FailoverErrorsSettingsBase.cpp  FailoverErrorsSettingsBase.h  FailoverRecorder.h  HashFunctionType.h  HashSelector.h  HashUtil.h  IOBufUtil.cpp  IOBufUtil.h  IovecCursor-inl.h  IovecCursor.cpp  IovecCursor.h  Keys.cpp  Keys.h  Lz4CompressionCodec.cpp  Lz4CompressionCodec.h  Lz4Immutable.cpp  Lz4Immutable.h  Lz4ImmutableCompressionCodec.cpp  Lz4ImmutableCompressionCodec.h  Makefile.am  (+52 more)
mcrouter/lib/allocator/: JemallocNodumpAllocator.cpp  JemallocNodumpAllocator.h
mcrouter/lib/carbon/: Artillery-inl.h  Artillery.h  CMakeLists.txt  CarbonMessageConversionUtils-inl.h  CarbonMessageConversionUtils.h  CarbonProtocolCommon.h  CarbonProtocolReader-inl.h  CarbonProtocolReader.cpp  CarbonProtocolReader.h  CarbonProtocolWriter-inl.h  CarbonProtocolWriter.h  CarbonQueueAppender.cpp  CarbonQueueAppender.h  CarbonWriter.h  CmdLineClient-inl.h  CmdLineClient.cpp  CmdLineClient.h  CommonSerializationTraits.h  FailoverUtil.h  Fields.h  JsonClient-inl.h  JsonClient.cpp  JsonClient.h  Keys-inl.h  Keys.h  Makefile.am  MessageCommon.h  NoopAdditionalLogger.h  ReplyCommon.h  RequestCommon.h  RequestReplyUtil.h  Result.cpp  Result.h  RoutingGroups.h  SerializationTraits.h  Stats.h  TypeList-inl.h  TypeList.h  Util.h  Variant.h  (+2 more)
mcrouter/lib/config/: CMakeLists.txt  ConfigPreprocessor.cpp  ConfigPreprocessor.h  ImportResolverIf.h  RendezvousHash.cpp  RendezvousHash.h  RouteHandleBuilder.h  RouteHandleFactory-inl.h  RouteHandleFactory.h  RouteHandleProvider-inl.h  RouteHandleProvider.h  RouteHandleProviderIf.h
mcrouter/lib/cycles/: Accumulator.cpp  Accumulator.h  Clocks.cpp  Clocks.h  Cycles.cpp  Cycles.h  ExtractorThread.cpp  ExtractorThread.h  Interval.h  QuantilesCalculator-inl.h  QuantilesCalculator.h
mcrouter/lib/debug/: CMakeLists.txt  ConnectionFifo.cpp  ConnectionFifo.h  ConnectionFifoProtocol.cpp  ConnectionFifoProtocol.h  Fifo.cpp  Fifo.h  FifoManager.cpp  FifoManager.h
mcrouter/lib/fbi/: cwlock.c  (+47 more)
mcrouter/m4/: ax_boost_context.m4  ax_cxx_compile_stdcxx_11.m4
mcrouter/routes/: AllAsyncRoute.cpp  AllAsyncRouteFactory.h  AllFastestRoute.cpp  AllFastestRouteFactory.h  AllInitialRoute.cpp  AllInitialRouteFactory.h  AllMajorityRoute.cpp  AllMajorityRouteFactory.h  AllSyncRoute.cpp  AllSyncRouteFactory.h  AsynclogRoute.cpp  AsynclogRoute.h  BigValueRoute-inl.h  BigValueRoute.cpp  BigValueRoute.h  BigValueRouteIf.h  BlackholeRoute-inl.h  BlackholeRoute.h  BlackholingPolicyVisitor.h  CMakeLists.txt  CarbonLookasideRoute.cpp  CarbonLookasideRoute.h  ClientCompatibilityCheckerRoute.h  CollectionRouteFactory.h  DefaultShadowPolicy.h  DestinationRoute.cpp  DestinationRoute.h  DevNullRoute.cpp  DevNullRoute.h  ErrorRoute.cpp  ErrorRoute.h  ErrorRouteFactory.h  ExtraRouteHandleProviderIf.h  FailoverPolicy.h  FailoverRateLimiter.cpp  FailoverRateLimiter.h  FailoverRoute-inl.h  FailoverRoute.cpp  FailoverRoute.h  FailoverWithExptimeRoute.cpp  (+114 more)
mcrouter/scripts/: INSTALL.md  Makefile_amazon-linux-2  Makefile_ubuntu-18.04  Makefile_ubuntu-20.04  Makefile_ubuntu-24.04  clean_ubuntu_14.04.sh  common.sh  get_and_build_by_make.sh  get_and_build_everything.sh  get_and_build_everything_by_make.sh  install_amazon-linux-2.sh  install_centos_7.2.sh  install_debian_9.3.sh  install_deps_amazon-linux-2.sh  install_ubuntu_12.04.sh  install_ubuntu_14.04.sh  install_ubuntu_15.04.sh  install_ubuntu_16.04.sh  install_ubuntu_18.04.sh  install_ubuntu_20.04.sh  run_loadtest.sh
mcrouter/test/: CMakeLists.txt  MCProcess.py  Makefile.am  McrouterTestCase.py  invalid_config.json  main.cpp  mcrouter_config.py  mcrouter_test_basic_2_1_1.json  mock_servers.py  routing_prefix_test_ascii.json  routing_prefix_test_umbrella.json  run_cpp_test.sh  run_python_test.sh  run_tests.sh  test_additional_fields.py  test_allow_only_gets.py  test_ascii.json  test_ascii_error.py  test_ascii_multiget.py  test_ascii_multiget_mock.py  test_async_files.py  test_async_files_attr.py  test_attach_default_routing_prefix.json  test_attach_default_routing_prefix.py  test_attach_default_routing_prefix_simple.json  test_axonlog.py  test_bad_params.py  test_basic_all_first.json  test_basic_all_majority.json  test_basic_all_sync.json  test_basic_failover.json  test_basic_failover_override.json  test_basic_l1_l2.json  test_basic_l1_l2_sizesplit.json  test_basic_l1_l2_sizesplit_bothset.json  test_bigvalue.py  test_carbonlookaside_route.py  test_config_params.py  test_const_shard_hash.json  test_const_shard_hash.py  (+111 more)
mcrouter/tools/: CMakeLists.txt  Makefile.am
(+656 files in other folders)
